--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     implementation 'com.google.devtools.ksp:symbol-processing-api:1.7.21-1.0.8'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     ksp 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
     ksp 'androidx.room:room-compiler:2.5.0'
