added implementation for touch events

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
+    implementation 'com.google.android.materal:material:1.8.0'
+
     ksp 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
     ksp 'androidx.room:room-compiler:2.5.0'
 
