--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     implementation 'com.google.android.material:material:1.8.0'
+    implementation files('libs/spotify-app-remote-release-0.7.2.aar ')
 
     ksp 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
     ksp 'androidx.room:room-compiler:2.5.0'
